GGG-119 Refactor generators and generalise type resolvers.