@@ -7,9 +7,8 @@ import no.sikt.graphitron.configuration.Extension;
 import no.sikt.graphitron.configuration.GeneratorConfig;
 import no.sikt.graphitron.configuration.externalreferences.ExternalReference;
 import no.sikt.graphitron.configuration.externalreferences.GlobalTransform;
-import no.sikt.graphitron.definitions.interfaces.GenerationTarget;
-import no.sikt.graphitron.generators.abstractions.ClassGenerator;
 import no.sikt.graphitron.generate.GraphQLGenerator;
+import no.sikt.graphitron.generators.abstractions.ClassGenerator;
 import no.sikt.graphql.schema.ProcessedSchema;
 import org.junit.ComparisonFailure;
 import org.junit.jupiter.api.AfterEach;
@@ -146,7 +145,7 @@ public abstract class GeneratorTest {
         var expectedFileNoImports = expectedFile
                 .stream()
                 .filter(it -> !it.startsWith("import") && !it.startsWith("package"))
-                .collect(Collectors.toList());
+                .toList();
         var trimmedExpectedFile = new ArrayList<String>();
         var isText = false;
         for (var line : expectedFileNoImports) {
@@ -338,7 +337,7 @@ public abstract class GeneratorTest {
         return Stream.of(entries).collect(Collectors.toSet());
     }
 
-    protected List<ClassGenerator<? extends GenerationTarget>> makeGenerators(ProcessedSchema schema) {
+    protected List<ClassGenerator> makeGenerators(ProcessedSchema schema) {
         return List.of();
     }
 
